crates/eden-config/tests/cases/fail/database_pool_min_is_greater_than_max_2/error.snap
---
source: crates/eden-config/tests/cases.rs
expression: diagnostic
input_file: crates/eden-config/tests/cases/fail/database_pool_min_is_greater_than_max_2
---
error: Replica database must not be writable
   ┌─ /eden.toml:11:12
   │
11 │ readonly = false
   │            ^^^^^
   │            │
   │            Set readonly to `true`
